# fx-csv-parser

./: CMakeLists.txt  LICENSE  Readme.md  main.cpp
examples/data/: .fx-rel.json  articles.csv  categories.csv  graph.dot  properties.csv
src/: CSVCell.cpp  CSVCell.h  CSVFile.cpp  CSVFile.h  CSVFolderParser.cpp  CSVFolderParser.h  CSVHeader.cpp  CSVHeader.h  CSVParser.cpp  CSVParser.h  CSVRow.cpp  CSVRow.h  Database.cpp  Database.h  DatabaseMetaInformation.cpp  DatabaseMetaInformation.h  ForeignKeyHeuristics.cpp  ForeignKeyHeuristics.h  TableMetaInformation.cpp  TableMetaInformation.h
src/heuristics/: jaccardSimilarity.cpp  jaccardSimilarity.h  jaroWinkler.cpp  jaroWinkler.h
src/strings/: stringUtils.h
